# GGJ2016

./: CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindShSDK.cmake
src/: CMakeLists.txt
src/Box2D/: CMakeLists.txt
src/Box2D/Box2D/: CMakeLists.txt
src/Extension/: CMakeLists.txt  Extension.cpp  Extension.h  GGJ2016.configext
src/Game/: CMakeLists.txt  Game.cpp  Game.h  GameState.cpp  GameState.h  GameStateGame.cpp  GameStateGame.h  GameStateManager.cpp  GameStateManager.h  GameStateMenuCredits.cpp  GameStateMenuCredits.h  GameStateMenuMain.cpp  GameStateMenuMain.h  Sound.cpp  Sound.h  Transition.cpp  Transition.h  main.cpp
src/Plugins/: CMakeLists.txt
src/Plugins/Example/: CMakeLists.txt  CShPluginExample.cpp  CShPluginExample.h
src/Plugins/Platformer/: CMakeLists.txt  CShPluginPlatformer.cpp  CShPluginPlatformer.h  GameBackground.cpp  GameBackground.h  GameCamera.cpp  GameCamera.h  GameContactListener.cpp  GameContactListener.h  GameObject.cpp  GameObject.h  GameObjectEnemy.cpp  GameObjectEnemy.h  GameObjectPike.cpp  GameObjectPike.h  GameObjectPlatform.cpp  GameObjectPlatform.h  GameObjectPlayer.cpp  GameObjectPlayer.h  GameObjectRock.cpp  GameObjectRock.h  GameObjectSensor.cpp  GameObjectSensor.h  GameObjectSpear.cpp  GameObjectSpear.h
