set(SHINE_EDITOR_EXT_DIR "../Extensions" CACHE PATH "Extension directory")

include_directories(../Box2D)
include_directories(${SHSDK_INCLUDE_DIRS})

set(SOURCES_EXTENSION Extension.cpp Extension.h)
source_group("Extension" FILES ${SOURCES_EXTENSION})

if(WIN32)
	set(SOURCES_DLLMAIN dllmain.cpp)
else(WIN32)
	set(SOURCES_DLLMAIN)
endif(WIN32)
source_group("dll" FILES ${SOURCES_DLLMAIN})

set(EXTENSION_SOURCES ${SOURCES_DLLMAIN} ${SOURCES_EXTENSION}) # compile extension sources
set(PLUGIN_OBJECTS $<TARGET_OBJECTS:PluginExample_Editor>) # embed plugin objects

add_library(ExtGGJ2016 SHARED ${EXTENSION_SOURCES} ${PLUGIN_OBJECTS})
set_property(TARGET ExtGGJ2016 PROPERTY FOLDER "Editor")
set_property(TARGET ExtGGJ2016 APPEND PROPERTY COMPILE_DEFINITIONS "SH_DEV=1")
set_property(TARGET ExtGGJ2016 APPEND PROPERTY COMPILE_DEFINITIONS "SH_DEBUG=1")
set_property(TARGET ExtGGJ2016 APPEND PROPERTY COMPILE_DEFINITIONS "SH_EDITOR=1")
set_property(TARGET ExtGGJ2016 APPEND PROPERTY COMPILE_DEFINITIONS "_INTERNAL_DLL")

if (WIN32)
	set_property(TARGET ExtGGJ2016 PROPERTY RUNTIME_OUTPUT_DIRECTORY "${SHINE_EDITOR_EXT_DIR}")
else (WIN32)
	set_property(TARGET ExtGGJ2016 PROPERTY LIBRARY_OUTPUT_DIRECTORY "${SHINE_EDITOR_EXT_DIR}")
endif (WIN32)

set_property(TARGET ExtGGJ2016 PROPERTY PREFIX "")

target_link_libraries(ExtGGJ2016 ${SHSDK_EDITOR_LIBRARIES} Box2D)

file(COPY "GGJ2016.configext" DESTINATION "${SHINE_EDITOR_EXT_DIR}")
